[project]
name = "myunsejeomju-backend"
version = "0.1.0"
description = "Myunsejeomju food ordering system backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "python-dotenv>=1.1.1",
    "mysqlclient>=2.2.0",
    "gunicorn>=21.2.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
]
dev = [
    "ruff>=0.2.0"
]

[dependency-groups]
test = [
    "pytest-django>=4.11.1",
]
